tools/flowc/tests/errors/error23c.flow
import tools/flowc/tests/errors/error23b;

export {
	c = 1;
}
